# Crypto-Forum

./: Cargo.toml  Decisions.md  README.md  messages.json  messages.json.old  todo
docs/: Binary vs Plaintext  Code structure.md  Decisions.md  File Structure.md  GitArk link.md  IPNS keys.md  Overview.md
reference/: readme  reference  reference.json  reference.sml  reference.toml
reference/accounts/: Alice  Bob
src/: custom_types.rs  lib.rs  main.rs  minimal_example.rs  read.rs  rust-crypto-crate.rs  user_keypair.rs  write.rs
src/CLI/: interactive_write.rs  user_keypair.rs  write.rs
src/backend/: base64.rs  custom_types.rs  encrypt_decrypt.rs  general_functions.rs  hex.rs  read.rs  read_serde.rs  read_smile.rs  tests.rs  write.rs  write_serde.rs  write_smile.rs
src/cli/: account_manager.rs  arguments.rs  errors.rs  input.rs  interactive_write.rs  print_messages.rs  user_keypair.rs
src/tests/unit_tests/: encrypt_decrypt.rs  mod.rs  read_write_json.rs
test_data/: succeed.json
tests/: encrypt_decrypt.rs  read_write_json.rs  read_write_toml.rs
