[package]
name = "crypto_forum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-api-backend-hyper = "0.6"
# Parsing
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
# Cryptography
chacha20poly1305 = "0.10"
sha2 = "0.10"
rand = "0.8"
# Concurrency
tokio = {version = "1.27", features = ["full"]}
futures = "0.3"

[dependencies.ed25519-dalek]
version = "1.0"
